--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
+    "locomotive-scroll": "5.0.0-beta.9",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
